Monitor en main y fixes